<?xml version="1.0" encoding="utf-8"?>

<FrameLayout  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_height="match_parent"
   >
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:fillViewport="false"
            android:layout_weight="1">
        <LinearLayout  xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/eancontainer"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minEms="@integer/ean_width"
            android:layout_weight="1"
            android:id="@+id/ean"
            android:saveEnabled="true"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:hint="@string/input_hint"
            android:paddingRight="@dimen/abc_button_padding_horizontal_material"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button"
            android:id="@+id/scan_button"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"
            tools:text="@string/dummy_content"
            android:paddingRight="@dimen/abc_action_bar_default_padding_material"
            />


        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:maxLines="3"
            tools:text="@string/dummy_content"
            android:layout_height="wrap_content"
            android:id="@+id/authors"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
       >
        <TextView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/bookSubTitle"
            android:textSize="@dimen/small_fontsize"
            tools:text="@string/dummy_content"
            android:maxLines="2"
            android:ellipsize="end"
            />
        <ImageView
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/bookCover"
            android:contentDescription="@string/book_cover"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/categories"
            tools:text="@string/dummy_content"
            android:textSize="@dimen/small_fontsize"
            />
    </LinearLayout>
        </LinearLayout></ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel_button"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_action_discard"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/ok_button"
            android:layout_weight="1"
            android:id="@+id/save_button"
            android:drawableLeft="@drawable/ic_action_accept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="bottom"
            />

    </LinearLayout>
    </LinearLayout>

</FrameLayout>
